--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html>
 <head>
@@ -38,14 +37,10 @@
         <div class="article">
           <p class="date">aug<span>28</span>2018</p>
           <h2><span>Template License</span></h2>
-          <p class="subh2">This is a free CSS website template by iWebsiteTemplate.com. This 
-work is distributed under the Creative Commons Attribution 3.0 License, 
-which means that you are free to use it for any personal or commercial purpose provided you credit me in the form of a link back to <a href="http://www.cssmoban.com/" title="模板之家">模板之家</a></p>
+          <p class="subh2">This is a free  website. You can find interesting things in it.</a></p>
           <p>Posted by <a href="#">Owner</a> &nbsp;|&nbsp; Filed under <a href="#">templates</a>, <a href="#">internet</a> <a href="#" class="com">Comments (3)</a></p>
           <img src="images/img1.jpg" width="605" height="197" alt="image" />
-          <p>This is a free CSS website template by iWebsiteTemplate.com. This 
-work is distributed under the Creative Commons Attribution 3.0 License, 
-which means that you are free to use it for any personal or commercial purpose provided you credit me in the form of a link back to <a href="http://www.cssmoban.com/" title="模板之家">模板之家</a></p>
+          <p>I will continue to update it.</a></p>
           <p class="spec"><a href="#" class="rm">Read more &raquo;</a></p>
         </div>
         <div class="article">
@@ -74,18 +69,17 @@ which means that you are free to use it for any personal or commercial purpose p
             <li><a href="#">Style Demo</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Archives</a></li>
-            <li><a href="#" title="Website Templates">Web Templates</a></li>
           </ul>
         </div>
         <div class="gadget">
           <h2 class="star"><span>Sponsors</span></h2><div class="clr"></div>
           <ul class="ex_menu">
-            <li><a href="#" title="Website Templates">DreamTemplate</a><br />Over 6,000+ Premium Web Templates</li>
+            <li><a href="#" title="Website">Dream</a><br />100 dream</li>
             <li><a href="#">TemplateSOLD</a><br />Premium WordPress &amp; Joomla Themes</li>
             <li><a href="#" title="Affordable Hosting">ImHosted.com</a><br />Affordable Web Hosting Provider</li>
             <li><a href="#" title="Stock Icons">MyVectorStore</a><br />Royalty Free Stock Icons</li>
             <li><a href="#" title="Website Builder">Evrsoft</a><br />Website Builder Software &amp; Tools</li>
-            <li><a href="#" title="CSS Templates">CSS Hub</a><br />Premium CSS Templates</li>
+            <li><a href="#" title="CSS">CSS Hub</a><br />Premium CSS </li>
           </ul>
         </div>
       </div>
@@ -118,7 +112,7 @@ which means that you are free to use it for any personal or commercial purpose p
   </div>
   <div class="footer">
     <div class="footer_resize">
-      <p class="lf">© Copyright <a href="#">MyWebSite</a>. Collect from <a href="http://www.cssmoban.com/" title="网站模板" target="_blank">网站模板</a></p>
+      <p class="lf">© Copyright <a href="#">MyWebSite</a>. </a></p>
       <ul class="fmenu">
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="support.html">Support</a></li>
