--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -37,7 +36,7 @@
       <div class="mainbar">
         <div class="article">
           <h2><span>Contact</span></h2><div class="clr"></div>
-          <p>You can find more of my free template designs at my website. For premium commercial designs, you can check out DreamTemplate.com.</p>
+          <p>You can find the my contact information here!</p>
         </div>
         
       </div>
@@ -52,22 +51,22 @@
           <h2 class="star"><span>Sidebar</span> Menu</h2><div class="clr"></div>
           <ul class="sb_menu">
             <li><a href="#">Home</a></li>
-            <li><a href="#">TemplateInfo</a></li>
+            <li><a href="#"> Info</a></li>
             <li><a href="#">Style Demo</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Archives</a></li>
-            <li><a href="#" title="Website Templates">Web Templates</a></li>
+            <li><a href="#" title="Website Templates">myweb</a></li>
           </ul>
         </div>
         <div class="gadget">
           <h2 class="star"><span>Sponsors</span></h2><div class="clr"></div>
           <ul class="ex_menu">
-            <li><a href="#" title="Website Templates">DreamTemplate</a><br />Over 6,000+ Premium Web Templates</li>
-            <li><a href="#">TemplateSOLD</a><br />Premium WordPress &amp; Joomla Themes</li>
-            <li><a href="#" title="Affordable Hosting">ImHosted.com</a><br />Affordable Web Hosting Provider</li>
-            <li><a href="#" title="Stock Icons">MyVectorStore</a><br />Royalty Free Stock Icons</li>
-            <li><a href="#" title="Website Builder">Evrsoft</a><br />Website Builder Software &amp; Tools</li>
-            <li><a href="#" title="CSS Templates">CSS Hub</a><br />Premium CSS Templates</li>
+            <li><a href="#" title="Website Templates">Baidu</a><br />Over 6,000+ Premium Web Templates</li>
+            <li><a href="#">TemplateSOLD</a><br />Weibo</li>
+            <li><a href="#" title="Affordable Hosting">ImHosted.com</a><br />xinlang</li>
+            <li><a href="#" title="Stock Icons">MyVectorStore</a><br />Tsinghua</li>
+            <li><a href="#" title="Website Builder">Evrsoft</a><br />patent</li>
+            <li><a href="#" title="CSS Templates">CSS Hub</a><br />ART</li>
           </ul>
         </div>
       </div>
