--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,10 @@
         <div class="article">
           <h2><span>Contact</span></h2><div class="clr"></div>
           <p>You can find the my contact information here!</p>
+          <p>QQ:839653183</p>
+          <p>email:839653183@qq.com</p>
+          <p>address:北京市海淀区上地10街10号</p>
+          <p align="center"> <input type="submit" name="uploadsubmit" id="btnupload" value="百度大厦" class="submit"  onclick="javascript:location.href='http://www.sipo.gov.cn/'"/></p>
         </div>
         
       </div>
