--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,8 @@
           <p>QQ:839653183</p>
           <p>email:839653183@qq.com</p>
           <p>address:北京市海淀区上地10街10号</p>
-          <p align="center"> <input type="submit" name="uploadsubmit" id="btnupload" value="百度大厦" class="submit"  onclick="javascript:location.href='http://www.sipo.gov.cn/'"/></p>
+          <p align="center"> <input type="submit" name="uploadsubmit" id="btnupload" value="百度大厦地址链接" class="submit"  onclick="javascript:location.href='http://www.sipo.gov.cn/'"/></p>
+          <p>&nbsp;<img border="0" src="images/pix1.jpg" width="426" height="240"></p>
         </div>
         
       </div>
