--- a/contact.html
+++ b/contact.html
@@ -40,8 +40,7 @@
           <p>QQ:839653183</p>
           <p>email:839653183@qq.com</p>
           <p>address:北京市海淀区上地10街10号</p>
-          <p align="center"> <input type="submit" name="uploadsubmit" id="btnupload" value="百度大厦地址链接" class="submit"  onclick="javascript:location.href='http://www.sipo.gov.cn/'"/></p>
-          <p>&nbsp;<img border="0" src="images/pix1.jpg" width="426" height="240"></p>
+          <p align="center"> <input type="submit" name="uploadsubmit" id="btnupload" value="百度大厦地址链接" class="submit"  onclick="javascript:location.href='https://baike.baidu.com/item/%E7%99%BE%E5%BA%A6%E5%A4%A7%E5%8E%A6/3132660?fr=kg_general'"/></p>
         </div>
         
       </div>
