--- a/contact.html
+++ b/contact.html
@@ -82,8 +82,8 @@
     <div class="fbg_resize">
       <div class="col c1">
         <h2><span>Image Gallery</span></h2>
-        <a href="#"><img src="images/pix1.jpg" width="58" height="58" alt="pix" /></a>
-        <a href="#"><img src="images/pix2.jpg" width="58" height="58" alt="pix" /></a>
+        <a href="https://allen1000.github.io/myweb/index.html"><img src="images/pix1.jpg" width="58" height="58" alt="pix" /></a>
+        <a href="https://allen1000.github.io/myweb/index.html"><img src="images/pix2.jpg" width="58" height="58" alt="pix" /></a>
         <a href="#"><img src="images/pix3.jpg" width="58" height="58" alt="pix" /></a>
         <a href="#"><img src="images/pix4.jpg" width="58" height="58" alt="pix" /></a>
         <a href="#"><img src="images/pix5.jpg" width="58" height="58" alt="pix" /></a>
