--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,11 @@
       <div class="clr"></div>
     </div>
   </div>
-
+ <table border="0" width="100%" cellspacing="0" cellpadding="0" background="images/topbkg.jpg">
+   <tr>
+      <td width="100%"><img border="0" src="images/topleft.jpg" width="398" height="84"></td>
+   </tr>
+ </table>
   <div class="fbg">
     <div class="fbg_resize">
       <div class="col c1">
