--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
   </div>
  <table border="0" width="100%" cellspacing="0" cellpadding="0" background="images/topbkg.jpg">
    <tr>
-      <td width="100%"><img border="0" src="images/topleft.jpg" width="398" height="84"></td>
+      <td width="100%"><img border="0" src="images/pix3.jpg" width="398" height="84"></td>
    </tr>
  </table>
   <div class="fbg">
