--- a/contact.html
+++ b/contact.html
@@ -77,11 +77,15 @@
       <div class="clr"></div>
     </div>
   </div>
- <table border="0" width="100%" cellspacing="0" cellpadding="0" background="images/topbkg.jpg">
-   <tr>
-      <td width="100%"><img border="0" src="images/pix3.jpg" width="398" height="84"></td>
-   </tr>
- </table>
+ <table border="0" width="100%" cellspacing="0" cellpadding="0">
+  <tr>
+    <td width="1%" valign="top">
+      <p align="right"><img src="images/pix3.jpg" width="58" height="58" alt="pix" /><br>
+      <img border="0" src="images/pix4.jpg" width="145" height="13"><br>
+      <img border="0" src="images/pix5.jpg" width="170" height="6"><br>
+      &nbsp;<img border="0" src="images/sidebottomimage.jpg" width="129" height="108"></td>
+  </tr>
+</table>
   <div class="fbg">
     <div class="fbg_resize">
       <div class="col c1">
