--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,13 @@
           <p>email:839653183@qq.com</p>
           <p>address:北京市海淀区上地10街10号</p>
           <p align="center"> <input type="submit" name="uploadsubmit" id="btnupload" value="百度大厦地址链接" class="submit"  onclick="javascript:location.href='https://baike.baidu.com/item/%E7%99%BE%E5%BA%A6%E5%A4%A7%E5%8E%A6/3132660?fr=kg_general'"/></p>
+          <tr>
+            <td width="1%" valign="top">
+            <p align="right"><img src="images/pix3.jpg" width="58" height="58" alt="pix" /><br>
+            <img border="0" src="images/pix4.jpg" width="145" height="13"><br>
+            <img border="0" src="images/pix5.jpg" width="170" height="6"><br>
+             &nbsp;<img border="0" src="images/sidebottomimage.jpg" width="129" height="108"></td>
+         </tr>
         </div>
         
       </div>
