--- a/contact.html
+++ b/contact.html
@@ -43,9 +43,8 @@
           <p align="center"> <input type="submit" name="uploadsubmit" id="btnupload" value="百度大厦地址链接" class="submit"  onclick="javascript:location.href='https://baike.baidu.com/item/%E7%99%BE%E5%BA%A6%E5%A4%A7%E5%8E%A6/3132660?fr=kg_general'"/></p>
           <tr>
             <td width="1%" valign="top">
-            <p align="right"><img src="images/pix3.jpg" width="58" height="58" alt="pix" /><br>
-            <img border="0" src="images/pix4.jpg" width="145" height="13"><br>
-            <img border="0" src="images/pix5.jpg" width="170" height="6"><br>
+            <p align="center"><img src="images/timg.jpeg" width="58" height="58" alt="pix" /><br>
+            <img border="0" src="images/timg1.jpeg" width="145" height="13"><br>
             </td>
          </tr>
         </div>
