--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
           <tr>
             <td width="1%" valign="top">
             <p align="center"><img src="images/timg.jpeg" width="400" height="260" alt="百度大厦" /><br>
-            <img border="0" src="images/timg1.jpeg" width="400" height="330"><br>
+            <!--<img border="0" src="images/timg1.jpeg" width="400" height="330"><br>-->
             </td>
          </tr>
         </div>
