--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,7 @@
           <tr>
             <td width="1%" valign="top">
             <p align="center"><img src="images/timg.jpeg" width="500" height="300" alt="百度大厦" /><br>
+            <p align="center"><font size="12">&nbsp;  百度一下，你就知道 </font></p>
             <!--<img border="0" src="images/timg1.jpeg" width="400" height="330"><br>-->
             </td>
          </tr>
