--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
             <!--<img border="0" src="images/timg1.jpeg" width="400" height="330"><br>-->
             </td>
          </tr>
-          <p align="center"><font size="12">&nbsp;  百度一下，你就知道 </font></p>
+          <p align="center"><font size="12">&nbsp;  百度一下，你就知道! </font></p>
         </div>
         
       </div>
