--- a/contact.html
+++ b/contact.html
@@ -62,12 +62,10 @@
         <div class="gadget">
           <h2 class="star"><span>Sidebar</span> Menu</h2><div class="clr"></div>
           <ul class="sb_menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#"> Info</a></li>
-            <li><a href="#">Style Demo</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Archives</a></li>
-            <li><a href="#" title="Website Templates">myweb</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="support.html">Support</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="blog.html">Blog</a></li>
           </ul>
         </div>
         <div class="gadget">
