--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
 <title>myweb</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -8,7 +8,6 @@
 <script type="text/javascript" src="js/cufon-yui.js"></script>
 <script type="text/javascript" src="js/arial.js"></script>
 <script type="text/javascript" src="js/cuf_run.js"></script>
-<!-- CuFon ends -->
 </head>
 <body>
 <div class="main">
@@ -108,7 +107,7 @@
   </div>
   <div class="footer">
     <div class="footer_resize">
-      <p class="lf">© Copyright <a href="#">MyWebSite</a>. Collect from <a href="http://www.cssmoban.com/" title="网站模板" target="_blank">网站模板</a></p>
+      <p class="lf">© Copyright <a href="#">MyWebSite</a>. Collect from <a href="http://www.cssmoban.com/" title="网站" target="_blank">网站</a></p>
       <ul class="fmenu">
         <li><a href="index.html">Home</a></li>
         <li><a href="support.html">Support</a></li>
