--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
   </div>
   <div class="footer">
     <div class="footer_resize">
-      <p class="lf">© Copyright <a href="#">MyWebSite</a>. Collect from <a href="http://www.cssmoban.com/" title="网站" target="_blank">网站</a></p>
+      <p class="lf">© Copyright <a href="https://allen1000.github.io/myweb/contact.html">MyWeb-feng</a>. Collect from <a href="http://www.cssmoban.com/" title="网站" target="_blank">网站</a></p>
       <ul class="fmenu">
         <li><a href="index.html">Home</a></li>
         <li><a href="support.html">Support</a></li>
