--- a/contact.html
+++ b/contact.html
@@ -14,13 +14,13 @@
 
   <div class="header">
     <div class="header_resize">
-      <div class="logo"><h1><a href="#"><img src="images/logo.jpg" width="48" height="50" alt="logo" /></a><a href="index.html">simple <span>web</span> <small>put your slogan here</small></a></h1></div>
+      <div class="logo"><h1><a href="http://www.tsinghua.edu.cn/publish/thu2018/index.html"><img src="images/timg4.jpg" width="48" height="50" alt="logo" /></a><a href="index.html">Learning<span>space</span> <small>Tsinghua</small></a></h1></div>
       <div class="menu_nav">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="support.html">Support</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="support.html">Deep Learning</a></li>
+          <li><a href="about.html">Reinforcement learning</a></li>
+          <li><a href="blog.html">Finance</a></li>
           <li class="active"><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
@@ -35,7 +35,7 @@
       <div class="mainbar">
         <div class="article">
           <h2><span>Contact</span></h2><div class="clr"></div>
-          <p>You can find the my contact information here!</p>
+          <p><font size="8">You can find the my contact information here!</font><</p>
           <p>QQ:839653183</p>
           <p>email:839653183@qq.com</p>
           <p>address:北京市海淀区上地10街10号</p>
@@ -59,23 +59,23 @@
           </form>
         </div>
         <div class="gadget">
-          <h2 class="star"><span>Sidebar</span> Menu</h2><div class="clr"></div>
+          <h2 class="star"><span>Links</span> Menu</h2><div class="clr"></div>
           <ul class="sb_menu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="support.html">Support</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="blog.html">Blog</a></li>
+            <li><a href="https://www.zhihu.com/">知乎</a></li>
+            <li><a href="http://www.163.com/">网易</a></li>
+            <li><a href="http://www.sina.com.cn/">新浪</a></li>
+            <li><a href="http://huodong.baidu.com/2018fifa/?SEM&PC&refer=302723&src=Baidu&medium=PPC&Network=1&kw=77517866958&ad=20242190282&mt=2&ap=clg1&ag_kwid=354-22-b73ad218792e5056.30a699f32024f605&audience=217775">百度</a></li>
           </ul>
         </div>
         <div class="gadget">
-          <h2 class="star"><span>Sponsors</span></h2><div class="clr"></div>
+          <h2 class="star"><span>Learning Online</span></h2><div class="clr"></div>
           <ul class="ex_menu">
-            <li><a href="#" title="Website Templates">Baidu</a><br />Over 6,000+ Premium Web Templates</li>
-            <li><a href="#">TemplateSOLD</a><br />Weibo</li>
-            <li><a href="#" title="Affordable Hosting">ImHosted.com</a><br />xinlang</li>
-            <li><a href="#" title="Stock Icons">MyVectorStore</a><br />Tsinghua</li>
-            <li><a href="#" title="Website Builder">Evrsoft</a><br />patent</li>
-            <li><a href="#" title="CSS Templates">CSS Hub</a><br />ART</li>
+            <li><a href="http://scikit-learn.org/stable/" title="Scikit-learn">Scikit-learn</a><br />Machine Learning</li>
+            <li><a href="https://www.deeplearning.ai/">Deep learning</a><br />course</li>
+            <li><a href="http://ai.baidu.com/paddlepaddle" title="paddlepaddle">paddlepaddle</a><br />基于PaddlePaddle开源深度学习框架</li>
+            <li><a href="https://reinforce.io/reinforcement-learning/" title="reinforcement-learning">reinforcement-learning</a><br />TensorForce</li>
+            <li><a href="http://gym.openai.com/" title="Gym ">Gym </a><br />Gym is a toolkit for developing and comparing reinforcement learning algorithms. </li>
+            <li><a href="https://docs.opencv.org/2.4/" title="opencv">opencv</a><br />Welcome to opencv documentation!</li>
           </ul>
         </div>
       </div>
@@ -109,10 +109,10 @@
     <div class="footer_resize">
       <p class="lf">© Copyright <a href="https://allen1000.github.io/myweb/index.html">MyWeb-feng</a>. Collect from <a href="http://www.cssmoban.com/" title="网站" target="_blank">网站</a></p>
       <ul class="fmenu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="support.html">Support</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="about.html">About Us</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="support.html">Deep Learning</a></li>
+          <li><a href="about.html">Reinforcement learning</a></li>
+          <li><a href="blog.html">Finance</a></li>
         <li class="active"><a href="contact.html">Contacts</a></li>
       </ul>
       <div class="clr"></div>
