--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
   <div class="header">
     <div class="header_resize">
-      <div class="logo"><h1><a href="http://www.tsinghua.edu.cn/publish/thu2018/index.html"><img src="images/timg4.jpg" width="48" height="50" alt="logo" /></a><a href="index.html">Learning<span>space</span> <small>Tsinghua</small></a></h1></div>
+      <div class="logo"><h1><a href="http://www.tsinghua.edu.cn/publish/thu2018/index.html"><img src="images/timg4.jpeg" width="48" height="50" alt="logo" /></a><a href="index.html">Learning<span>space</span> <small>Tsinghua</small></a></h1></div>
       <div class="menu_nav">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -35,7 +35,7 @@
       <div class="mainbar">
         <div class="article">
           <h2><span>Contact</span></h2><div class="clr"></div>
-          <p><font size="8">You can find the my contact information here!</font><</p>
+          <p><font size="5">You can find the my contact information here!</font><</p>
           <p>QQ:839653183</p>
           <p>email:839653183@qq.com</p>
           <p>address:北京市海淀区上地10街10号</p>
