--- a/contact.html
+++ b/contact.html
@@ -35,10 +35,10 @@
       <div class="mainbar">
         <div class="article">
           <h2><span>Contact</span></h2><div class="clr"></div>
-          <p><font size="5">You can find the my contact information here!</font><</p>
+          <p><font size="5">You can find the my contact information here!</font></p>
           <p>QQ:839653183</p>
-          <p>email:839653183@qq.com</p>
-          <p>address:北京市海淀区上地10街10号</p>
+          <p>Email:839653183@qq.com</p>
+          <p>Address:北京市海淀区上地10街10号</p>
           <p align="center"> <input type="submit" name="uploadsubmit" id="btnupload" value="百度大厦地址链接" class="submit"  onclick="javascript:location.href='https://baike.baidu.com/item/%E7%99%BE%E5%BA%A6%E5%A4%A7%E5%8E%A6/3132660?fr=kg_general'"/></p>
           <tr>
             <td width="1%" valign="top">
@@ -55,7 +55,8 @@
         <div class="searchform">
           <form id="formsearch" name="formsearch" method="post" action="">
             <span><input name="editbox_search" class="editbox_search" id="editbox_search" maxlength="80" value="Search our ste:" type="text" /></span>
-            <input name="button_search" src="images/search_btn.gif" class="button_search" type="image" />
+            <input name="button_search" src="images/search_btn.gif" class="button_search" type="image" onclick="javascript:location.href='https://baike.baidu.com/item/%E7%99%BE%E5%BA%A6%E5%A4%A7%E5%8E%A6/3132660?fr=kg_general'"/>
+            <p align="center"> <input type="submit" name="uploadsubmit" id="btnupload" value="百度大厦地址链接" class="submit"  onclick="javascript:location.href='https://baike.baidu.com/item/%E7%99%BE%E5%BA%A6%E5%A4%A7%E5%8E%A6/3132660?fr=kg_general'"/></p>
           </form>
         </div>
         <div class="gadget">
@@ -71,11 +72,11 @@
           <h2 class="star"><span>Learning Online</span></h2><div class="clr"></div>
           <ul class="ex_menu">
             <li><a href="http://scikit-learn.org/stable/" title="Scikit-learn">Scikit-learn</a><br />Machine Learning</li>
-            <li><a href="https://www.deeplearning.ai/">Deep learning</a><br />course</li>
-            <li><a href="http://ai.baidu.com/paddlepaddle" title="paddlepaddle">paddlepaddle</a><br />基于PaddlePaddle开源深度学习框架</li>
-            <li><a href="https://reinforce.io/reinforcement-learning/" title="reinforcement-learning">reinforcement-learning</a><br />TensorForce</li>
+            <li><a href="https://www.deeplearning.ai/">Deep learning</a><br />Course</li>
+            <li><a href="http://ai.baidu.com/paddlepaddle" title="paddlepaddle">paddlepaddle</a><br />PaddlePaddle开源深度学习框架</li>
+            <li><a href="https://reinforce.io/reinforcement-learning/" title="reinforcement-learning">Reinforcement-learning</a><br />TensorForce</li>
             <li><a href="http://gym.openai.com/" title="Gym ">Gym </a><br />Gym is a toolkit for developing and comparing reinforcement learning algorithms. </li>
-            <li><a href="https://docs.opencv.org/2.4/" title="opencv">opencv</a><br />Welcome to opencv documentation!</li>
+            <li><a href="https://docs.opencv.org/2.4/" title="opencv">Opencv</a><br />Welcome to opencv documentation!</li>
           </ul>
         </div>
       </div>
