--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
           <form id="formsearch" name="formsearch" method="post" action="">
             <span><input name="editbox_search" class="editbox_search" id="editbox_search" maxlength="80" value="Search our ste:" type="text" /></span>
             <input name="button_search" src="images/search_btn.gif" class="button_search" type="image" onclick="javascript:location.href='https://baike.baidu.com/'"/>
-            <p align="center"> <input type="submit" name="uploadsubmit" id="btnupload" value="百度大厦地址链接" class="submit"  onclick="javascript:location.href='https://baike.baidu.com/'"/></p>
+            <p align="center"> <input type="submit" name="uploadsubmit" id="btnupload" value="百度一下" class="submit"  onclick="javascript:location.href='https://baike.baidu.com/'"/></p>
           </form>
         </div>
         <div class="gadget">
