--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
       <div class="mainbar">
         <div class="article">
           <h2><span>Contact</span></h2><div class="clr"></div>
-          <p><font size="5">You can find the my contact information here!</font></p>
+          <p><font size="5">You can find the my contact information below!</font></p>
           <p>QQ:839653183</p>
           <p>Email:839653183@qq.com</p>
           <p>Address:北京市海淀区上地10街10号</p>
@@ -56,8 +56,9 @@
           <form id="formsearch" name="formsearch" method="post" action="">
             <span><input name="editbox_search" class="editbox_search" id="editbox_search" maxlength="80" value="Search " type="text"/></span>
             <input name="button_search" src="images/search_btn.gif" class="button_search" type="image" onclick="javascript:location.href='https://baike.baidu.com/'"/>
-            <p align="center"> <input type="submit" name="uploadsubmit" id="btnupload" value="百度一下" class="submit"  onclick="javascript:location.href='https://baike.baidu.com/'"/></p>
+            
           </form>
+          <p align="center"> <input type="submit" name="uploadsubmit" id="btnupload" value="百度一下" class="submit"  onclick="javascript:location.href='https://baike.baidu.com/'"/></p>
         </div>
         <div class="gadget">
           <h2 class="star"><span>Links</span> Menu</h2><div class="clr"></div>
