--- a/contact.html
+++ b/contact.html
@@ -51,13 +51,7 @@
         </div>
         
       </div>
-      <div class="sidebar">
-        <div class="searchform">
-          <form id="formsearch" name="formsearch" method="post" action="">
-            <span><input name="editbox_search" class="editbox_search" id="editbox_search" maxlength="80" value="Search " type="text"/></span>
-            <input name="button_search" src="images/search_btn.gif" class="button_search" type="image" onclick="javascript:location.href='https://baike.baidu.com/'"/>
-            
-          </form>
+      <div class="article">
           <p align="center"> <input type="submit" name="uploadsubmit" id="btnupload" value="百度一下" class="submit"  onclick="javascript:location.href='https://baike.baidu.com/'"/></p>
         </div>
         <div class="gadget">
