--- a/contact.html
+++ b/contact.html
@@ -51,9 +51,8 @@
         </div>
         
       </div>
-      <div class="article">
+      <div class="sidebar">
           <p align="center"> <input type="submit" name="uploadsubmit" id="btnupload" value="百度一下" class="submit"  onclick="javascript:location.href='https://baike.baidu.com/'"/></p>
-        </div>
         <div class="gadget">
           <h2 class="star"><span>Links</span> Menu</h2><div class="clr"></div>
           <ul class="sb_menu">
