--- a/contact.html
+++ b/contact.html
@@ -89,13 +89,14 @@
         <a href="#"><img src="images/pix6.jpg" width="58" height="58" alt="pix" /></a>
       </div>
       <div class="col c2">
-        <h2><span>Lorem Ipsum</span></h2>
-        <p>Lorem ipsum dolor<br />Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum, dui pede condimentum odio, ac blandit ante orci ut diam.</p>
+        <h2><span>Learning space</span></h2>
+        <p>Introduction<br />A guide with associated case studies and a  library on new build and refurbishment in the sectors including sustainable approaches and free incubation spaces</p>
       </div>
       <div class="col c3">
         <h2><span>About</span></h2>
         <img src="images/white.jpg" width="56" height="56" alt="pix" />
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu posuere nunc justo tempus leo. llorem, eu posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum. <a href="#">Learn more...</a></p>
+        <p>The first wave of deep learning applications has been characterised by hand-designed models and long, supervised training times, i.e. requiring manual data annotation. For illustration, neural networks used in image classification applications require millions of labelled example images.</p>
+        <p>The next generation of applications will need to learn and act with minimal human intervention.<a href="https://en.wikipedia.org/wiki/Deep_learning">Learn more...</a></p>
       </div>
       <div class="clr"></div>
     </div>
