--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
       </div>
       <div class="col c3">
         <h2><span>About</span></h2>
-        <img src="images/white.jpg" width="56" height="56" alt="pix" />
+        <img src="images/timg4.jpg" width="56" height="56" alt="pix" />
         <p>The first wave of deep learning applications has been characterised by hand-designed models and long, supervised training times, i.e. requiring manual data annotation. For illustration, neural networks used in image classification applications require millions of labelled example images.</p>
         <p>The next generation of applications will need to learn and act with minimal human intervention.<a href="https://en.wikipedia.org/wiki/Deep_learning">Learn more...</a></p>
       </div>
