--- a/contact.html
+++ b/contact.html
@@ -81,12 +81,12 @@
     <div class="fbg_resize">
       <div class="col c1">
         <h2><span>Image Gallery</span></h2>
-        <a href="https://allen1000.github.io/myweb/index.html"><img src="images/pix1.jpg" width="58" height="58" alt="pix" /></a>
-        <a href="https://allen1000.github.io/myweb/index.html"><img src="images/pix2.jpg" width="58" height="58" alt="pix" /></a>
-        <a href="#"><img src="images/pix3.jpg" width="58" height="58" alt="pix" /></a>
-        <a href="#"><img src="images/pix4.jpg" width="58" height="58" alt="pix" /></a>
-        <a href="#"><img src="images/pix5.jpg" width="58" height="58" alt="pix" /></a>
-        <a href="#"><img src="images/pix6.jpg" width="58" height="58" alt="pix" /></a>
+        <a href="https://deepmind.com/research/alphago/alphago-vs-alphago-self-play-games/"><img src="images/pix1.jpg" width="58" height="58" alt="pix" /></a>
+        <a href="http://music.taihe.com/"><img src="images/pix2.jpg" width="58" height="58" alt="pix" /></a>
+        <a href="https://www.baidu.com/s?ie=utf-8&f=3&rsv_bp=1&rsv_idx=1&tn=baidu&wd=%E5%8C%97%E4%BA%AC%E6%97%B6%E9%97%B4&oq=baidu%25E4%25B8%2596%25E7%2595%258C%25E6%2597%25B6%25E9%2597%25B4&rsv_pq=8eadfe95000214c2&rsv_t=c39fX8zwJur3lOoql5RXWtnklR4eBpzBwxMR389nmXIlWaf9UbH%2FZpQnfxY&rqlang=cn&rsv_enter=1&inputT=2814&rsv_sug3=110&rsv_sug1=132&rsv_sug7=101&rsv_sug2=1&prefixsug=beijing&rsp=1&rsv_sug4=4800"><img src="images/pix3.jpg" width="58" height="58" alt="pix" /></a>
+        <a href="https://www.baifubao.com/"><img src="images/pix4.jpg" width="58" height="58" alt="pix" /></a>
+        <a href="http://ai.baidu.com/"><img src="images/pix5.jpg" width="58" height="58" alt="pix" /></a>
+        <a href="http://apollo.auto/"><img src="images/pix6.jpg" width="58" height="58" alt="pix" /></a>
       </div>
       <div class="col c2">
         <h2><span>Learning space</span></h2>
@@ -94,7 +94,7 @@
       </div>
       <div class="col c3">
         <h2><span>About</span></h2>
-        <img src="images/timg4.jpg" width="56" height="56" alt="pix" />
+        <img src="images/timg4.jpeg" width="56" height="56" alt="pix" />
         <p>The first wave of deep learning applications has been characterised by hand-designed models and long, supervised training times, i.e. requiring manual data annotation. For illustration, neural networks used in image classification applications require millions of labelled example images.</p>
         <p>The next generation of applications will need to learn and act with minimal human intervention.<a href="https://en.wikipedia.org/wiki/Deep_learning">Learn more...</a></p>
       </div>
