--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
           <li><a href="support.html">Deep Learning</a></li>
           <li><a href="about.html">Reinforcement learning</a></li>
           <li><a href="blog.html">Finance</a></li>
-          <li class="active"><a href="contact.html">Contact Us</a></li>
+          <li class="active"><a href="contact.html">Contacts</a></li>
         </ul>
       </div>
       <div class="clr"></div>
