--- a/support.html
+++ b/support.html
@@ -16,20 +16,21 @@
 
   <div class="header">
     <div class="header_resize">
-      <div class="logo"><h1><a href="#"><img src="images/logo.jpg" width="48" height="50" alt="logo" /></a><a href="index.html">simple <span>web</span> <small>put your slogan here</small></a></h1></div>
+      <div class="logo"><h1><a href="http://www.tsinghua.edu.cn/publish/thu2018/index.html"><img src="images/timg4.jpeg" width="48" height="50" alt="logo" /></a><a href="index.html">Learning<span>space</span> <small>Tsinghua</small></a></h1></div>
       <div class="menu_nav">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li class="active"><a href="support.html">Support</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="support.html">Deep Learning</a></li>
+          <li><a href="about.html">Reinforcement learning</a></li>
+          <li><a href="blog.html">Finance</a></li>
+          <li class="active"><a href="contact.html">Contacts</a></li>
         </ul>
       </div>
       <div class="clr"></div>
     </div>
   </div>
 
+<div class="hbg">&nbsp;</div>
   <div class="hbg">&nbsp;</div>
 
   <div class="content">
@@ -52,71 +53,64 @@
         </div>
       </div>
       <div class="sidebar">
-        <div class="searchform">
-          <form id="formsearch" name="formsearch" method="post" action="">
-            <span><input name="editbox_search" class="editbox_search" id="editbox_search" maxlength="80" value="Search our ste:" type="text" /></span>
-            <input name="button_search" src="images/search_btn.gif" class="button_search" type="image" />
-          </form>
-        </div>
+          <p align="left"> <input type="submit" name="uploadsubmit" id="btnupload" value="百度一下" class="submit"  onclick="javascript:location.href='https://baike.baidu.com/'"/></p>
         <div class="gadget">
-          <h2 class="star"><span>Sidebar</span> Menu</h2><div class="clr"></div>
+          <h2 class="star"><span>Links</span> Menu</h2><div class="clr"></div>
           <ul class="sb_menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">TemplateInfo</a></li>
-            <li><a href="#">Style Demo</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Archives</a></li>
-            <li><a href="#" title="Website Templates">Web Templates</a></li>
+            <li><a href="https://www.zhihu.com/">知乎</a></li>
+            <li><a href="http://www.163.com/">网易</a></li>
+            <li><a href="http://www.sina.com.cn/">新浪</a></li>
+            <li><a href="http://huodong.baidu.com/2018fifa/?SEM&PC&refer=302723&src=Baidu&medium=PPC&Network=1&kw=77517866958&ad=20242190282&mt=2&ap=clg1&ag_kwid=354-22-b73ad218792e5056.30a699f32024f605&audience=217775">百度</a></li>
           </ul>
         </div>
         <div class="gadget">
-          <h2 class="star"><span>Sponsors</span></h2><div class="clr"></div>
+          <h2 class="star"><span>Learning Online</span></h2><div class="clr"></div>
           <ul class="ex_menu">
-            <li><a href="#" title="Website Templates">DreamTemplate</a><br />Over 6,000+ Premium Web Templates</li>
-            <li><a href="#">TemplateSOLD</a><br />Premium WordPress &amp; Joomla Themes</li>
-            <li><a href="#" title="Affordable Hosting">ImHosted.com</a><br />Affordable Web Hosting Provider</li>
-            <li><a href="#" title="Stock Icons">MyVectorStore</a><br />Royalty Free Stock Icons</li>
-            <li><a href="#" title="Website Builder">Evrsoft</a><br />Website Builder Software &amp; Tools</li>
-            <li><a href="#" title="CSS Templates">CSS Hub</a><br />Premium CSS Templates</li>
+            <li><a href="http://scikit-learn.org/stable/" title="Scikit-learn">Scikit-learn</a><br />Machine Learning</li>
+            <li><a href="https://www.deeplearning.ai/">Deep learning</a><br />Course</li>
+            <li><a href="http://ai.baidu.com/paddlepaddle" title="paddlepaddle">paddlepaddle</a><br />PaddlePaddle开源深度学习框架</li>
+            <li><a href="https://reinforce.io/reinforcement-learning/" title="reinforcement-learning">Reinforcement-learning</a><br />TensorForce</li>
+            <li><a href="http://gym.openai.com/" title="Gym ">Gym </a><br />Gym is a toolkit for developing and comparing reinforcement learning algorithms. </li>
+            <li><a href="https://docs.opencv.org/2.4/" title="opencv">Opencv</a><br />Welcome to opencv documentation!</li>
           </ul>
         </div>
       </div>
       <div class="clr"></div>
     </div>
   </div>
-
   <div class="fbg">
     <div class="fbg_resize">
       <div class="col c1">
         <h2><span>Image Gallery</span></h2>
-        <a href="#"><img src="images/pix1.jpg" width="58" height="58" alt="pix" /></a>
-        <a href="#"><img src="images/pix2.jpg" width="58" height="58" alt="pix" /></a>
-        <a href="#"><img src="images/pix3.jpg" width="58" height="58" alt="pix" /></a>
-        <a href="#"><img src="images/pix4.jpg" width="58" height="58" alt="pix" /></a>
-        <a href="#"><img src="images/pix5.jpg" width="58" height="58" alt="pix" /></a>
-        <a href="#"><img src="images/pix6.jpg" width="58" height="58" alt="pix" /></a>
+        <a href="https://deepmind.com/research/alphago/alphago-vs-alphago-self-play-games/"><img src="images/pix1.jpg" width="58" height="58" alt="pix" /></a>
+        <a href="http://music.taihe.com/"><img src="images/pix2.jpg" width="58" height="58" alt="pix" /></a>
+        <a href="https://www.baidu.com/s?ie=utf-8&f=3&rsv_bp=1&rsv_idx=1&tn=baidu&wd=%E5%8C%97%E4%BA%AC%E6%97%B6%E9%97%B4&oq=baidu%25E4%25B8%2596%25E7%2595%258C%25E6%2597%25B6%25E9%2597%25B4&rsv_pq=8eadfe95000214c2&rsv_t=c39fX8zwJur3lOoql5RXWtnklR4eBpzBwxMR389nmXIlWaf9UbH%2FZpQnfxY&rqlang=cn&rsv_enter=1&inputT=2814&rsv_sug3=110&rsv_sug1=132&rsv_sug7=101&rsv_sug2=1&prefixsug=beijing&rsp=1&rsv_sug4=4800"><img src="images/pix3.jpg" width="58" height="58" alt="pix" /></a>
+        <a href="https://www.baifubao.com/"><img src="images/pix4.jpg" width="58" height="58" alt="pix" /></a>
+        <a href="http://ai.baidu.com/"><img src="images/pix5.jpg" width="58" height="58" alt="pix" /></a>
+        <a href="http://apollo.auto/"><img src="images/pix6.jpg" width="58" height="58" alt="pix" /></a>
       </div>
       <div class="col c2">
-        <h2><span>Lorem Ipsum</span></h2>
-        <p>Lorem ipsum dolor<br />Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum, dui pede condimentum odio, ac blandit ante orci ut diam.</p>
+        <h2><span>Learning space</span></h2>
+        <p>Introduction<br />A guide with associated case studies and a  library on new build and refurbishment in the sectors including sustainable approaches and free incubation spaces</p>
       </div>
       <div class="col c3">
         <h2><span>About</span></h2>
-        <img src="images/white.jpg" width="56" height="56" alt="pix" />
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu posuere nunc justo tempus leo. llorem, eu posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum. <a href="#">Learn more...</a></p>
+        <img src="images/timg4.jpeg" width="56" height="56" alt="pix" />
+        <p>The first wave of deep learning applications has been characterised by hand-designed models and long, supervised training times, i.e. requiring manual data annotation. For illustration, neural networks used in image classification applications require millions of labelled example images.</p>
+        <p>The next generation of applications will need to learn and act with minimal human intervention.<a href="https://en.wikipedia.org/wiki/Deep_learning">Learn more...</a></p>
       </div>
       <div class="clr"></div>
     </div>
   </div>
   <div class="footer">
     <div class="footer_resize">
-      <p class="lf">© Copyright <a href="#">MyWebSite</a>. Collect from <a href="http://www.cssmoban.com/" title="网站模板" target="_blank">网站模板</a></p>
+      <p class="lf">© Copyright <a href="https://allen1000.github.io/myweb/index.html">MyWeb-feng</a>. Collect from <a href="http://www.cssmoban.com/" title="网站" target="_blank">网站</a></p>
       <ul class="fmenu">
-        <li><a href="index.html">Home</a></li>
-        <li class="active"><a href="support.html">Support</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="contact.html">Contacts</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="support.html">Deep Learning</a></li>
+          <li><a href="about.html">Reinforcement learning</a></li>
+          <li><a href="blog.html">Finance</a></li>
+        <li class="active"><a href="contact.html">Contacts</a></li>
       </ul>
       <div class="clr"></div>
     </div>
