--- a/support.html
+++ b/support.html
@@ -20,10 +20,10 @@
       <div class="menu_nav">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="support.html">Deep Learning</a></li>
+          <li class="active"><a href="support.html">Deep Learning</a></li>
           <li><a href="about.html">Reinforcement learning</a></li>
           <li><a href="blog.html">Finance</a></li>
-          <li class="active"><a href="contact.html">Contacts</a></li>
+          <li ><a href="contact.html">Contacts</a></li>
         </ul>
       </div>
       <div class="clr"></div>
