--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <div class="logo"><h1><a href="http://www.tsinghua.edu.cn/publish/thu2018/index.html"><img src="images/timg4.jpeg" width="48" height="50" alt="logo" /></a><a href="index.html">Learning<span>space</span> <small>Tsinghua</small></a></h1></div>
       <div class="menu_nav">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li class="active"><a href="index.html">Home</a></li>
           <li><a href="support.html">Deep Learning</a></li>
           <li><a href="about.html">Reinforcement learning</a></li>
           <li><a href="blog.html">Finance</a></li>
-          <li class="active"><a href="contact.html">Contacts</a></li>
+          <li ><a href="contact.html">Contacts</a></li>
         </ul>
       </div>
       <div class="clr"></div>
@@ -55,38 +55,31 @@
         <p class="pages"><small>Page 1 of 2 &nbsp;&nbsp;&nbsp;</small> <span>1</span> <a href="#">2</a> <a href="#">&raquo;</a></p>
       </div>
       <div class="sidebar">
-        <div class="searchform">
-          <form id="formsearch" name="formsearch" method="post" action="">
-            <span><input name="editbox_search" class="editbox_search" id="editbox_search" maxlength="80" value="Search our ste:" type="text" /></span>
-            <input name="button_search" src="images/search_btn.gif" class="button_search" type="image" />
-          </form>
-        </div>
+          <p align="left"> <input type="submit" name="uploadsubmit" id="btnupload" value="百度一下" class="submit"  onclick="javascript:location.href='https://baike.baidu.com/'"/></p>
         <div class="gadget">
-          <h2 class="star"><span>Sidebar</span> Menu</h2><div class="clr"></div>
+          <h2 class="star"><span>Links</span> Menu</h2><div class="clr"></div>
           <ul class="sb_menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">TemplateInfo</a></li>
-            <li><a href="#">Style Demo</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Archives</a></li>
+            <li><a href="https://www.zhihu.com/">知乎</a></li>
+            <li><a href="http://www.163.com/">网易</a></li>
+            <li><a href="http://www.sina.com.cn/">新浪</a></li>
+            <li><a href="http://huodong.baidu.com/2018fifa/?SEM&PC&refer=302723&src=Baidu&medium=PPC&Network=1&kw=77517866958&ad=20242190282&mt=2&ap=clg1&ag_kwid=354-22-b73ad218792e5056.30a699f32024f605&audience=217775">百度</a></li>
           </ul>
         </div>
         <div class="gadget">
-          <h2 class="star"><span>Sponsors</span></h2><div class="clr"></div>
+          <h2 class="star"><span>Learning Online</span></h2><div class="clr"></div>
           <ul class="ex_menu">
-            <li><a href="#" title="Website">Dream</a><br />100 dream</li>
-            <li><a href="#">TemplateSOLD</a><br />Premium WordPress &amp; Joomla Themes</li>
-            <li><a href="#" title="Affordable Hosting">ImHosted.com</a><br />Affordable Web Hosting Provider</li>
-            <li><a href="#" title="Stock Icons">MyVectorStore</a><br />Royalty Free Stock Icons</li>
-            <li><a href="#" title="Website Builder">Evrsoft</a><br />Website Builder Software &amp; Tools</li>
-            <li><a href="#" title="CSS">CSS Hub</a><br />Premium CSS </li>
+            <li><a href="http://scikit-learn.org/stable/" title="Scikit-learn">Scikit-learn</a><br />Machine Learning</li>
+            <li><a href="https://www.deeplearning.ai/">Deep learning</a><br />Course</li>
+            <li><a href="http://ai.baidu.com/paddlepaddle" title="paddlepaddle">paddlepaddle</a><br />PaddlePaddle开源深度学习框架</li>
+            <li><a href="https://reinforce.io/reinforcement-learning/" title="reinforcement-learning">Reinforcement-learning</a><br />TensorForce</li>
+            <li><a href="http://gym.openai.com/" title="Gym ">Gym </a><br />Gym is a toolkit for developing and comparing reinforcement learning algorithms. </li>
+            <li><a href="https://docs.opencv.org/2.4/" title="opencv">Opencv</a><br />Welcome to opencv documentation!</li>
           </ul>
         </div>
       </div>
       <div class="clr"></div>
     </div>
   </div>
-
   <div class="fbg">
     <div class="fbg_resize">
       <div class="col c1">
