--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       <div class="mainbar">
         <div class="article">
           <p class="date">aug<span>28</span>2018</p>
-          <h2><span>Template License</span></h2>
+          <h2><span>License</span></h2>
           <p class="subh2">This is a free  website. You can find interesting things in it.</a></p>
-          <p>Posted by <a href="#">Owner</a> &nbsp;|&nbsp; Filed under <a href="#">templates</a>, <a href="#">internet</a> <a href="#" class="com">Comments (3)</a></p>
+          <p>Posted by <a href="contact.html">Owner</a> &nbsp;|&nbsp; Filed under <a href="contact.html">Feng</a>, <a href="https://baike.baidu.com/item/PhD/2081627?fr=aladdin">P.H.D</a> <a href="http://www.tsinghua.edu.cn/publish/thu2018/index.html" class="com">Tsinghua</a></p>
           <img src="images/img1.jpg" width="605" height="197" alt="image" />
           <p>I will continue to update it.</a></p>
           <p class="spec"><a href="#" class="rm">Read more &raquo;</a></p>
@@ -47,12 +47,12 @@
           <p class="date">aug<span>27</span>2018</p>
           <h2><span>Lorem Ipsum</span> Dolor Sit</h2>
           <p class="subh2">Donec Curabitur lacinia interdum molestie. Nunc lacinia viverra ante non facilisis. Pellentesque volutpat nisl at turpis ultricies elementum non eget libero. In laoreet tortor eget elit vulputate.</p>
-          <p>Posted by <a href="#">Owner</a> &nbsp;|&nbsp; Filed under <a href="#">templates</a>, <a href="#">internet</a> <a href="#" class="com">Comments (7)</a></p>
+          <p>Posted by <a href="contact.html">Owner</a> &nbsp;|&nbsp; Filed under <a href="contact.html">Feng</a>, <a href="https://baike.baidu.com/item/PhD/2081627?fr=aladdin">P.H.D</a> <a href="http://www.tsinghua.edu.cn/publish/thu2018/index.html" class="com">Tsinghua</a></p>
           <img src="images/img2.jpg" width="605" height="197" alt="image" />
           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum, dui pede condimentum odio, ac blandit ante orci ut diam. Cras fringilla magna. Phasellus suscipit, leo a pharetra condimentum, lorem tellus eleifend magna, eget fringilla velit magna id neque. Curabitur vel urna. In tristique orci porttitor ipsum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam.</p>
           <p class="spec"><a href="#" class="rm">Read more &raquo;</a></p>
         </div>
-        <p class="pages"><small>Page 1 of 2 &nbsp;&nbsp;&nbsp;</small> <span>1</span> <a href="#">2</a> <a href="#">&raquo;</a></p>
+        <!--<p class="pages"><small>Page 1 of 2 &nbsp;&nbsp;&nbsp;</small> <span>1</span> <a href="#">2</a> <a href="#">&raquo;</a></p>-->
       </div>
       <div class="sidebar">
           <p align="left"> <input type="submit" name="uploadsubmit" id="btnupload" value="百度一下" class="submit"  onclick="javascript:location.href='https://baike.baidu.com/'"/></p>
@@ -108,11 +108,11 @@
     <div class="footer_resize">
       <p class="lf">© Copyright <a href="https://allen1000.github.io/myweb/index.html">MyWeb-feng</a>. Collect from <a href="http://www.cssmoban.com/" title="网站" target="_blank">网站</a></p>
       <ul class="fmenu">
-          <li><a href="index.html">Home</a></li>
+          <li class="active"><a href="index.html">Home</a></li>
           <li><a href="support.html">Deep Learning</a></li>
           <li><a href="about.html">Reinforcement learning</a></li>
           <li><a href="blog.html">Finance</a></li>
-        <li class="active"><a href="contact.html">Contacts</a></li>
+          <li ><a href="contact.html">Contacts</a></li>
       </ul>
       <div class="clr"></div>
     </div>
