--- a/support.html
+++ b/support.html
@@ -36,18 +36,17 @@
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2><span>Support to</span> Company Name</h2><div class="clr"></div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Suspendisse nulla ligula, blandit ultricies aliquet ac, lobortis in massa. Nunc dolor sem, tincidunt vitae viverra in, egestas sed lacus.</strong> Etiam in ullamcorper felis. Nulla cursus feugiat leo, ut dictum metus semper a. Vivamus euismod, arcu gravida sollicitudin vestibulum, quam sem tempus quam, quis ullamcorper erat nunc in massa. Donec aliquet ante non diam sollicitudin quis auctor velit sodales. Morbi neque est, posuere at fringilla non, mollis nec nibh. Sed commodo tortor nec sem tincidunt mattis. Nam convallis aliquam nibh eu luctus. Nunc vel tincidunt lacus. Suspendisse sit amet pulvinar ante.</p>
-          <p>Phasellus diam justo, laoreet vel vulputate eu, congue vel est. Maecenas eros libero, sollicitudin a vulputate fermentum, ultrices vel lacus. Nam in metus non augue fermentum consequat ultrices ac enim. Integer aliquam urna non diam aliquam eget hendrerit sem molestie.</p>
-          <p><strong>Lorem ipsum dolor sit amet</strong></p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget bibendum tellus. Nunc vel imperdiet tellus. Mauris ornare aliquam urna, accumsan bibendum eros auctor ac.</p>
+          <h2><span>About</span> Deep learning</h2><div class="clr"></div>
+          <p>Deep learning architectures such as deep neural networks <strong> deep belief networks and recurrent neural networks</strong> have been applied to fields including computer vision, speech recognition, natural language processing, audio recognition, social network filtering, machine translation, bioinformatics, drug design and board game programs</p>
+          <p><strong>Image recognition</strong></p>
+          <p>Some useful websites</p>
           <ul class="sb_menu">
-            <li><a href="#"><strong>Lorem ipsum</strong></a></li>
-            <li><a href="#"><strong>Lorem ipsum</strong></a></li>
-            <li><a href="#"><strong>Lorem ipsum</strong></a></li>
-            <li><a href="#"><strong>Lorem ipsum</strong></a></li>
-            <li><a href="#"><strong>Lorem ipsum</strong></a></li>
-            <li><a href="#"><strong>Lorem ipsum</strong></a></li>
+            <li><a href="http://www.tineye.com/"><strong>Tineye</strong></a></li>
+            <li><a href="http://www.cnblogs.com/taokongcn/p/4341371.html"><strong>caffe</strong></a></li>
+            <li><a href="http://peipa.essex.ac.uk/info/groups.html"><strong>CV Groups</strong></a></li>
+            <li><a href="http://vision.middlebury.edu/stereo/"><strong>Tomasi</strong></a></li>
+            <li><a href="http://www.via.cornell.edu/"><strong>Vision and Autonomous Systems Center</strong></a></li>
+            <li><a href="http://ai.stanford.edu/"><strong>Stanford.edu</strong></a></li>
           </ul>
         </div>
       </div>
@@ -106,10 +105,10 @@
       <p class="lf">© Copyright <a href="https://allen1000.github.io/myweb/index.html">MyWeb-feng</a>. Collect from <a href="http://www.cssmoban.com/" title="网站" target="_blank">网站</a></p>
       <ul class="fmenu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="support.html">Deep Learning</a></li>
+          <li class="active"><a href="support.html">Deep Learning</a></li>
           <li><a href="about.html">Reinforcement learning</a></li>
           <li><a href="blog.html">Finance</a></li>
-        <li class="active"><a href="contact.html">Contacts</a></li>
+          <li><a href="contact.html">Contacts</a></li>
       </ul>
       <div class="clr"></div>
     </div>
