--- a/about.html
+++ b/about.html
@@ -21,9 +21,9 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="support.html">Deep Learning</a></li>
-          <li><a href="about.html">Reinforcement learning</a></li>
+          <li class="active"><a href="about.html">Reinforcement learning</a></li>
           <li><a href="blog.html">Finance</a></li>
-          <li class="active"><a href="contact.html">Contacts</a></li>
+          <li><a href="contact.html">Contacts</a></li>
         </ul>
       </div>
       <div class="clr"></div>
@@ -36,15 +36,15 @@
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2><span>About to</span> Company Name</h2><div class="clr"></div>
-          <p><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget bibendum tellus. Nunc vel imperdiet tellus. Mauris ornare aliquam urna, accumsan bibendum eros auctor ac.</strong></p>
-          <p>Curabitur purus mi, pharetra vitae viverra et, mattis sit amet nunc. Quisque enim ipsum, convallis sit amet molestie in, placerat vel urna. Praesent congue auctor elit, nec pretium ipsum volutpat vitae. Vivamus eget ipsum sit amet ipsum tincidunt fermentum. Sed hendrerit neque ac erat condimentum vulputate. Nulla velit massa, dictum etinterdum quis, tempus at velit.</p>
+          <h2><span>About</span>reinforcement learning</h2><div class="clr"></div>
+          <p><strong>Reinforcement learning (RL)</strong></p>
+          <p>is an area of machine learning inspired by behaviourist psychology, concerned with how software agents ought to take actions in an environment so as to maximize some notion of cumulative reward. The problem, due to its generality, is studied in many other disciplines, such as game theory, control theory, operations research, information theory, simulation-based optimization, multi-agent systems, swarm intelligence, statistics and genetic algorithms. In the operations research and control literature, reinforcement learning is called approximate dynamic programming, or neuro-dynamic programming.The problems of interest in reinforcement learning have also been studied in the theory of optimal control, which is concerned mostly with the existence and characterization of optimal solutions, and algorithms for their exact computation, and less with learning or approximation, particularly in the absence of a mathematical model of the environment. In economics and game theory, reinforcement learning may be used to explain how equilibrium may arise under bounded rationality.</p>
         </div>
         <div class="article">
-          <h2><span>Our</span> Mission</h2><div class="clr"></div>
-          <p><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget bibendum tellus. Nunc vel imperdiet tellus. Mauris ornare aliquam urna, accumsan bibendum eros auctor ac.</strong></p>
-          <p>Maecenas vestibulum fermentum eleifend. Mauris erat sem, suscipit non tincidunt quis, vestibulum eget elit. Duis eget arcu ante. Proin nulla elit, elementum sit amet commodo et, eleifend vitae quam. Nam vel aliquam tortor. Aliquam bibendum erat a urna interdum quis mattis augue interdum. Phasellus fermentum bibendum mauris, ut semper justo pharetra vestibulum. Duis dictum purus sed nibh commodo a congue elit lobortis. Nunc sed feugiat tellus. Mauris aliquet lorem non enim euismod quis fermentum erat porta. Nullam non elit orci. Aliquam blandit mattis feugiat. Cras pulvinar aliquet massa, quis laoreet mi pulvinar ac. Aliquam mi augue, vehicula in consectetur in, porttitor sed tellus. Mauris convallis dapibus auctor. Integer in egestas lorem. In nulla dolor, sollicitudin vitae sollicitudin quis, viverra at lorem.</p>
-          <p>Ut ullamcorper velit et nisi feugiat non sagittis tortor pharetra. Mauris ut urna et magna commodo cursus. Curabitur quis elementum arcu. Maecenas eleifend, urna vitae vehicula bibendum, felis tellus tincidunt lorem, at iaculis neque eros ac dui. Nunc malesuada pulvinar suscipit. Phasellus sed tortor quis ligula facilisis aliquam. Aliquam quis magna eu dolor posuere malesuada. Quisque consequat, metus fermentum convallis imperdiet, ante justo pharetra enim, vel commodo ipsum mauris eget purus. Morbi lacinia nisl urna, scelerisque suscipit lacus. Nulla ac orci ut nunc venenatis gravida.</p>
+          <h2><span>Our</span> Exploration</h2><div class="clr"></div>
+          <p><strong>Reinforcement learning requires clever exploration mechanisms. </strong></p>
+          <p>Randomly selecting actions, without reference to an estimated probability distribution, shows poor performance. The case of (small) finite Markov decision processes is relatively well understood. </p>
+          <p>However, due to the lack of algorithms that provably scale well with the number of states (or scale to problems with infinite state spaces), simple exploration methods are the most practical.</p>
         </div>
       </div>
       <div class="sidebar">
@@ -103,9 +103,9 @@
       <ul class="fmenu">
           <li><a href="index.html">Home</a></li>
           <li><a href="support.html">Deep Learning</a></li>
-          <li><a href="about.html">Reinforcement learning</a></li>
+          <li class="active"><a href="about.html">Reinforcement learning</a></li>
           <li><a href="blog.html">Finance</a></li>
-        <li class="active"><a href="contact.html">Contacts</a></li>
+          <li><a href="contact.html">Contacts</a></li>
       </ul>
       <div class="clr"></div>
     </div>
