--- a/about.html
+++ b/about.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>mywebsite</title>
+<title>myweb</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link href="style.css" rel="stylesheet" type="text/css" />
 
@@ -20,10 +18,10 @@
       <div class="menu_nav">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="support.html">Deep Learning</a></li>
-          <li class="active"><a href="about.html">Reinforcement learning</a></li>
-          <li><a href="blog.html">Finance</a></li>
-          <li><a href="contact.html">Contacts</a></li>
+          <li ><a href="support.html">Deep Learning</a></li>
+          <li><a href="about.html">Reinforcement learning</a></li>
+          <li class="active"><a href="blog.html">Finance</a></li>
+          <li ><a href="contact.html">Contacts</a></li>
         </ul>
       </div>
       <div class="clr"></div>
@@ -36,15 +34,18 @@
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2><span>About</span>reinforcement learning</h2><div class="clr"></div>
-          <p><strong>Reinforcement learning (RL)</strong></p>
-          <p>is an area of machine learning inspired by behaviourist psychology, concerned with how software agents ought to take actions in an environment so as to maximize some notion of cumulative reward. The problem, due to its generality, is studied in many other disciplines, such as game theory, control theory, operations research, information theory, simulation-based optimization, multi-agent systems, swarm intelligence, statistics and genetic algorithms. In the operations research and control literature, reinforcement learning is called approximate dynamic programming, or neuro-dynamic programming.The problems of interest in reinforcement learning have also been studied in the theory of optimal control, which is concerned mostly with the existence and characterization of optimal solutions, and algorithms for their exact computation, and less with learning or approximation, particularly in the absence of a mathematical model of the environment. In economics and game theory, reinforcement learning may be used to explain how equilibrium may arise under bounded rationality.</p>
-        </div>
-        <div class="article">
-          <h2><span>Our</span> Exploration</h2><div class="clr"></div>
-          <p><strong>Reinforcement learning requires clever exploration mechanisms. </strong></p>
-          <p>Randomly selecting actions, without reference to an estimated probability distribution, shows poor performance. The case of (small) finite Markov decision processes is relatively well understood. </p>
-          <p>However, due to the lack of algorithms that provably scale well with the number of states (or scale to problems with infinite state spaces), simple exploration methods are the most practical.</p>
+          <h2><span>About</span> Deep learning</h2><div class="clr"></div>
+          <p>Deep learning architectures such as deep neural networks <strong> deep belief networks and recurrent neural networks</strong> have been applied to fields including computer vision, speech recognition, natural language processing, audio recognition, social network filtering, machine translation, bioinformatics, drug design and board game programs</p>
+          <p><strong>Image recognition</strong></p>
+          <p>Some useful websites</p>
+          <ul class="sb_menu">
+            <li><a href="http://www.tineye.com/"><strong>Tineye</strong></a></li>
+            <li><a href="http://www.cnblogs.com/taokongcn/p/4341371.html"><strong>caffe</strong></a></li>
+            <li><a href="http://peipa.essex.ac.uk/info/groups.html"><strong>CV Groups</strong></a></li>
+            <li><a href="http://vision.middlebury.edu/stereo/"><strong>Tomasi</strong></a></li>
+            <li><a href="http://www.via.cornell.edu/"><strong>Vision and Autonomous Systems Center</strong></a></li>
+            <li><a href="http://ai.stanford.edu/"><strong>Stanford.edu</strong></a></li>
+          </ul>
         </div>
       </div>
       <div class="sidebar">
@@ -103,8 +104,8 @@
       <ul class="fmenu">
           <li><a href="index.html">Home</a></li>
           <li><a href="support.html">Deep Learning</a></li>
-          <li class="active"><a href="about.html">Reinforcement learning</a></li>
-          <li><a href="blog.html">Finance</a></li>
+          <li><a href="about.html">Reinforcement learning</a></li>
+          <li class="active"><a href="blog.html">Finance</a></li>
           <li><a href="contact.html">Contacts</a></li>
       </ul>
       <div class="clr"></div>
