--- a/about.html
+++ b/about.html
@@ -34,17 +34,14 @@
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2><span>About</span> Deep learning</h2><div class="clr"></div>
-          <p>Deep learning architectures such as deep neural networks <strong> deep belief networks and recurrent neural networks</strong> have been applied to fields including computer vision, speech recognition, natural language processing, audio recognition, social network filtering, machine translation, bioinformatics, drug design and board game programs</p>
-          <p><strong>Image recognition</strong></p>
+          <h2><span>About</span> About Quantopian</h2><div class="clr"></div>
+          <p>Quantopian is a crowd-sourced quantitative investment firm. We inspire talented people from around the world to write investment algorithms. </p>
+          <p>Quantopian provides capital, education, data, a research environment, and a development platform to algorithm authors (quants). We offer license agreements for algorithms that fit our investment strategy, and the licensing authors are paid based on their strategy's individual performance. We provide everything a quant needs to create a strategy and profit from it. </p>
+          <p><strong>Quantopian websites</strong></p>
           <p>Some useful websites</p>
           <ul class="sb_menu">
-            <li><a href="http://www.tineye.com/"><strong>Tineye</strong></a></li>
-            <li><a href="http://www.cnblogs.com/taokongcn/p/4341371.html"><strong>caffe</strong></a></li>
-            <li><a href="http://peipa.essex.ac.uk/info/groups.html"><strong>CV Groups</strong></a></li>
-            <li><a href="http://vision.middlebury.edu/stereo/"><strong>Tomasi</strong></a></li>
-            <li><a href="http://www.via.cornell.edu/"><strong>Vision and Autonomous Systems Center</strong></a></li>
-            <li><a href="http://ai.stanford.edu/"><strong>Stanford.edu</strong></a></li>
+            <li><a href="https://www.quantopian.com/"><strong>Quantopian</strong></a></li>
+            <li><a href="https://www.ricequant.com/algorithms"><strong>Ricequant</strong></a></li>
           </ul>
         </div>
       </div>
